fixed layout issues

--- a/src/components/HelpingPeople/index.css
+++ b/src/components/HelpingPeople/index.css
@@ -132,10 +132,22 @@
 }
 
 @media screen and (max-width: 570px) {
-  .info {
+  /* .info {
     grid-column: 1/3;
     margin-left: 3rem;
     width: 300px;
+  } */
+
+  .info {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 1rem;
+    padding-top: 2rem;
+    margin: 0;
+    grid-column: unset;
+    width: 80vw;
   }
 
   .rows {
